AWS S3の解説とサンプルを見直し